# End-to-End-ML-project-MLflow

./: README.md  main.py  params.yaml  requirements.txt  schema.yaml  setup.cfg  template.py  test.py
artifacts/data_transformation/: test.csv  train.csv
artifacts/data_validation/: report.yaml
artifacts/model_evaluation/: metric.json
artifacts/model_evaluation/model_artifacts/: model.joblib
artifacts/model_trainer/: elasticnet.pkl  elasticnet_best_params.json  model.joblib  randomforest_best_params.json  xgbregressor.pkl  xgbregressor_best_params.json
config/: config.yaml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  jp.py
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  trials.ipynb
src/my_project/: __init__.py  cli.py
src/my_project/components/: data_ingestion.py  data_transfromation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/my_project/config/: configuration.py
src/my_project/entity/: config_entity.py
src/my_project/pipeline/: stage_01_data_ingestion.py  stage_02_datavalidation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/my_project/utils/: common.py
