[metadata]
name = my_project
version = 0.1.0
description = An end-to-end machine learning project with MLflow tracking
long_description = file: README.md
long_description_content_type = text/markdown
author = Okoronkwo Francis Ifeanyi
author_email = francisroyce12@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/Francisroyce/End-to-End-ML-project-MLflow
project_urls =
    Homepage = https://github.com/Francisroyce/End-to-End-ML-project-MLflow
    Repository = https://github.com/Francisroyce/End-to-End-ML-project-MLflow
    Issues = https://github.com/Francisroyce/End-to-End-ML-project-MLflow/issues

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.12
install_requires =
    pandas
    numpy
    seaborn
    matplotlib
    scikit-learn
    mlflow

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mlp = my_project.cli:main
